--- a/index.css
+++ b/index.css
@@ -83,6 +83,7 @@ nav form input{
     flex-grow:4;
     gap: 2rem;
     margin: 2rem 10% 0 10%;
+    color:#404040;
 }
 
 #appointmentStats h3{
@@ -100,11 +101,9 @@ nav form input{
     min-width: 10rem;
     flex-grow:1;
     padding:0 0 0 1rem;
-    color:#b6b6b6;
 }
 
 #welcome{
-    color:#b6b6b6;
     width:30rem;
     flex-grow:2;
     border-radius: .5rem;
@@ -115,13 +114,14 @@ nav form input{
 
 #upcomingAppointments{
     background-color: white;
-    padding:1rem;
-    margin: 2rem 1rem 0 0;
+    padding:0rem 1rem 2rem 1rem;
+    margin: 2rem 1rem 5rem 0;
     border-radius: .5rem;
     flex-grow:3;
 }
 
 #dashboardBottomRow{
+    color:#404040;
     display:flex;
     flex-grow:4;
     justify-content: center;
@@ -135,9 +135,31 @@ nav form input{
     padding: 0;
 }
 
+#upcomingAppointments table{
+    width:100%;
+    border-radius: .5rem;
+    border-spacing: 0;
+    border: 1px solid #b6b6b6;
+    overflow: hidden;
+}
+
+#upcomingAppointments th,td{
+    padding:1rem;
+}
+
+#upcomingAppointments tr:nth-child(even) {
+    background-color: #fafafa;
+}
+
+.dataField{
+    background-color: #605bff;
+    color:white;
+}
+
 #reminderBox{
     flex-grow:1;
     margin-left:1rem;
+    height:20rem;
     border-radius: .5rem;
 }
 
@@ -186,7 +208,7 @@ aside ul{
         border-style:none;
         padding:.5rem 3rem .5rem 3rem;
         border-radius:0 0 .5rem .5rem;
-        width:49.5%;
+        width:5%;
     }
 
     .stats{
@@ -194,7 +216,7 @@ aside ul{
         width:100%;
         margin-top:.25rem;
         display:none;
-        height: 15rem;
+        height: 17.5rem;
         flex-grow:unset;
     }
 
@@ -203,7 +225,7 @@ aside ul{
         margin-top:.25rem;
         display:none;
         flex-grow:unset;
-        height:15rem;
+        height:17.5rem;
     }
 
     #dashboardBottomRow{
@@ -212,7 +234,7 @@ aside ul{
     }
 
     #upcomingAppointments{
-        margin: 1rem 0 5rem;
+        margin: 1rem 0 0 0;
     }
 
     #appointmentStats{
