--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ body{
 }
 
 #navItems a{
-    padding: 1.5rem 1rem 1.5rem 1rem;
+    padding: 1.75rem 1rem 1.5rem 1rem;
     text-decoration: none;
     color:white;
 }
@@ -159,8 +159,22 @@ nav form input{
 #reminderBox{
     flex-grow:1;
     margin-left:1rem;
-    height:20rem;
+    display: flex;
+    flex-direction:column;
+    max-height:20rem;
+    height:auto;
     border-radius: .5rem;
+}
+
+.reminder{
+    direction:rtl;
+    text-align:left;
+}
+
+.reminder input[type='checkbox']{
+    transform: scale(1.5);
+    accent-color: #605bff;
+    margin:0 .5rem 1rem 0;
 }
 
 .upcomingAppointment{
