--- a/index.css
+++ b/index.css
@@ -166,6 +166,27 @@ nav form input{
     border-radius: .5rem;
 }
 
+#reminderBox form{
+    border-top: 1px solid #404040;
+    margin: 0 0 .5rem -.25rem;
+    padding:.5rem 0 .5rem 0;
+}
+
+#reminderBox form input{
+    border: 1px solid #404040;
+    border-radius:.5rem;
+    padding:.5rem;
+    margin-right:.5rem;
+}
+
+#reminderBox form button{
+    background-color: #605bff;
+    color:white;
+    border-style:none;
+    padding:.5rem;
+    border-radius:.5rem;
+}
+
 .reminder{
     direction:rtl;
     text-align:left;
