--- a/index.css
+++ b/index.css
@@ -86,6 +86,46 @@ nav form input{
     color:#404040;
 }
 
+#patientListBox{
+    background-color: white;
+    margin: 2rem 20% 0 20%;
+    border-radius:.5rem;
+    padding: 1rem;
+}
+
+#patientListBox table{
+    width:100%;
+    border-radius: .5rem;
+    border-spacing: 0;
+    border: 1px solid #b6b6b6;
+    text-align: center;
+    overflow: hidden;
+}
+
+#patientBox{
+    background-color: white;
+    border-radius:.5rem;
+    margin: 3rem 20% 0 20%;
+    padding:1rem;
+    display:flex;
+    flex-wrap: wrap;
+}
+
+
+#patientBox h1{
+    width:100%;
+}
+
+#patientBox h2{
+    width:50%;
+}
+
+
+.patientRow:hover{
+    background-color: #8d8aff;
+    color:white;
+}
+
 #appointmentStats h3{
     color:#605bff;
 }
@@ -200,11 +240,6 @@ nav form input{
     margin:0 .5rem 1rem 0;
 }
 
-.upcomingAppointment{
-    display:flex;
-    justify-content: space-between;
-    gap: 3rem;
-}
 
 aside{
     background-color: white;
@@ -285,5 +320,19 @@ aside ul{
 
     #reminderBox{
         margin:1rem 0 0 0;
+    }
+
+    #patientListBox{
+        margin: 1rem 0 0 0;
+    }
+
+    .patientRow td{
+        padding: .25rem;
+        font-size: 90%;
+    }
+
+    #patientBox {
+        width: 100%;
+        margin: 3rem 0 0 0;
     }
   }
