removed patient page, expansion buttons to patients, api to fetch patient icons into list

--- a/index.css
+++ b/index.css
@@ -80,17 +80,33 @@ nav form input{
 #appointmentStats{
     display:flex;
     justify-content: center;
-    flex-grow:4;
+    flex-grow:5;
     gap: 2rem;
     margin: 2rem 10% 0 10%;
     color:#404040;
 }
 
-.patientListBox{
+#patientsPage{
+    margin: 2rem 10% 0 10%;
+    display:flex;
+    gap:2rem;
+}
+
+#regPatientBox{
     background-color: white;
-    margin: 2rem 20% 0 20%;
+    margin-top:1rem;
     border-radius:.5rem;
     padding: 1rem;
+    flex-grow: 1;
+    height: fit-content;
+}
+
+#patientListBox{
+    background-color: white;
+    margin-top:1rem;
+    border-radius:.5rem;
+    padding: 1rem;
+    flex-grow:10;
 }
 
 #regForm{
@@ -105,8 +121,10 @@ nav form input{
 .inputBox{
     display:flex;
     flex-direction: column;
-    width: 30%;
+    width: 85%;
+    align-self: center;
     gap:1rem;
+    padding:.5rem 0 .5rem 0;
 }
 
 .inputBox input{
@@ -122,7 +140,7 @@ nav form input{
 
 .inputSection{
     display:flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
 }
 
@@ -145,11 +163,20 @@ nav form input{
 
 .patientCard{
     display:flex;
-    width:90%;
     flex-direction:row;
     justify-content: space-evenly;
     border-top: 1px solid #b6b6b6;
-    margin: 0 auto;
+}
+
+.patientDetails{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width:fit-content;
+}
+
+.patientCard svg{
+    max-width:11rem;
 }
 
 .patientCard:hover{
@@ -178,12 +205,6 @@ nav form input{
     color:#605bff;
 }
 
-.cardPatientIcon{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
 #appointmentStats h3{
     color:#605bff;
 }
@@ -205,27 +226,27 @@ nav form input{
     width: 100%;
 }
 
-#patientButtons{
+.patientButtons{
     display:flex;
+    flex-direction: column;
     justify-content: center;
     border-radius: 2rem;
     gap:2rem;
-    width:100%;
 }
 
-#patientButtons button{
+.patientButtons button{
     padding:1rem;
     font-size:larger;
     border-radius:2rem;
     border-style:none;
 }
 
-#editPatientBtn{
+.editPatientBtn{
     background-color:#ffcb08;
     color:white;
 }
 
-#deletePatientBtn{
+.deletePatientBtn{
     background-color: #fc3517;
     color:white;
 }
@@ -411,6 +432,21 @@ aside ul{
     flex-direction:column;
 }
 
+.symptoms{
+    width:25%;
+}
+
+.medication{
+    width: 25%;
+}
+
+.itemList{
+    display:flex;
+    flex-direction: row;
+    flex-wrap:wrap;
+    gap:1rem;
+}
+
 @media only screen and (max-width: 1000px) {
     body{
         font-size: initial;
@@ -486,7 +522,7 @@ aside ul{
         margin: 1rem 0 0 0;
     }
 
-    #patientButtons button{
+    .patientButtons button{
         font-size:unset;
     }
 
@@ -541,5 +577,39 @@ aside ul{
     .cardPatientIcon{
         align-self: center;
         margin:2rem;
+    }
+
+    #patientsPage{
+        flex-direction: column-reverse;
+        margin:1rem 0 1rem 0;
+    }
+
+    .patientCard svg{
+        align-self: center;
+        padding:1rem;
+    }
+
+    #regPatientBox{
+        width:100%;
+        margin: 1rem 0 0 0;
+        padding: 1rem 0 1rem 0;
+    }
+
+    #regPatientBox h3{
+        padding-left:1rem;
+    }
+
+    .patientDetails{
+        width:100%;
+        margin: 0 0 1rem 0;
+        flex-direction: column;
+    }
+
+    .medication{
+        width:100%;
+    }
+
+    .symptoms{
+        width:100%;
     }
   }
