patient CRUD, html and css changes,  date formatting

--- a/index.css
+++ b/index.css
@@ -97,7 +97,9 @@ nav form input{
     margin-top:1rem;
     border-radius:.5rem;
     padding: 1rem;
-    flex-grow: 1;
+    flex-grow: 2;
+    display:flex;
+    flex-direction: column;
     height: fit-content;
 }
 
@@ -114,7 +116,7 @@ nav form input{
     flex-direction: column;
     flex-wrap:wrap;
     margin-top:2rem;
-    gap:2rem;
+    gap:.5rem;
     justify-content: center;
 }
 
@@ -128,7 +130,7 @@ nav form input{
 }
 
 .inputBox input{
-    border-radius:1rem;
+    border-radius:.5rem;
     border: 1px solid #b6b6b6;
     padding:.25rem;
 }
@@ -138,14 +140,18 @@ nav form input{
     margin: 0 auto;
 }
 
-.inputSection{
-    display:flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
 .inputBox label{
     color:#605bff;
+}
+
+.inputBox select{
+    border-radius:.5rem;
+    padding:.25rem;
+    border: 1px solid #b6b6b6;
+}
+
+.appointmentConfirmBtn{
+    background-color: aquamarine;
 }
 
 #submitBtn{
@@ -153,6 +159,7 @@ nav form input{
     color:white;
     background-color: #605bff;
     padding:.5rem;
+    border-style:none;
 }
 
 #maleFemaleRadio{
@@ -217,7 +224,7 @@ nav form input{
 }
 
 #setAppointmentForm input{
-    border-radius:2rem;
+    border-radius:.5rem;
     padding:.5rem;
     border: 1px solid #b6b6b6;
 }
@@ -230,30 +237,28 @@ nav form input{
     padding:1rem;
 }
 
-.patientButtons{
+#patientButtons{
     display:flex;
     flex-direction: row;
     justify-content: center;
-    border-radius: 2rem;
     margin: 0 0 1rem 0;
     gap:2rem;
 }
 
-.patientButtons button{
+#patientButtons button{
     padding:1rem;
-    border-radius:2rem;
+    border-radius:.5rem;
     border-style:none;
     width:fit-content;
+    color:white;
 }
 
-.editPatientBtn{
+#editPatientBtn{
     background-color:#ffd84a;
-    color:white;
 }
 
-.deletePatientBtn{
+#deletePatientBtn{
     background-color: #ff595f;
-    color:white;
 }
 
 .stats{
@@ -396,13 +401,19 @@ aside ul{
     justify-content: center;
 }
 
-.info{
+#info{
     display:flex;
     flex-direction: column;
     justify-content: space-around;
 }
 
-.infoBlock{
+#infoValues{
+    display:flex;
+    flex-direction:column;
+    justify-content: space-around;
+}
+
+#infoBlock{
     display:flex;
     justify-content: center;
     gap:1rem;
@@ -415,6 +426,18 @@ aside ul{
     flex-direction:column;
     flex-grow:1;
     padding: 2rem 0 0 0;
+}
+
+#patientUpperSection input{
+    border-radius:.5rem;
+    border: 1px solid #b6b6b6;
+    padding:.25rem;
+}
+
+#patientUpperSection select{
+    border-radius:.5rem;
+    padding:.25rem;
+    border: 1px solid #b6b6b6;
 }
 
 .listItem{
@@ -453,7 +476,7 @@ aside ul{
 
 .appointment button{
     color:white;
-    border-radius:2rem;
+    border-radius:.5rem;
     border-style:none;
     padding: 1rem 2rem 1rem 2rem;
 }
@@ -464,7 +487,7 @@ aside ul{
 }
 
 .appointmentCancelBtn{
-    background-color: #605bff;
+    background-color: #ffcb08;
 }
 
 .appointmentConfirmBtn{
@@ -583,10 +606,6 @@ aside ul{
     .inputBox input{
         margin-top:1rem;
         margin-bottom:1rem;
-    }
-
-    .inputSection{
-        flex-direction: column;
     }
 
     .patientListBox{
